Adding initial config

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "practice-cli",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "Brayan Bernal <brayanbernal0710@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "typescript": "^5.2.2"
+  }
 }
