--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.8.6",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.51.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
